adapters/vault-markdown/tests/ui/unbound-store-is-not-person-repository.stderr
error[E0277]: the trait bound `BoundMarkdownVault: PersonRepository` is not satisfied
 --> tests/ui/unbound-store-is-not-person-repository.rs:7:26
  |
7 |     require_repository::<BoundMarkdownVault>();
  |                          ^^^^^^^^^^^^^^^^^^ the trait `PersonRepository` is not implemented for `BoundMarkdownVault`
  |
note: required by a bound in `require_repository`
 --> tests/ui/unbound-store-is-not-person-repository.rs:4:35
  |
4 | fn require_repository<Repository: PersonRepository>() {}
  |                                   ^^^^^^^^^^^^^^^^ required by this bound in `require_repository`
